--- a/assets/i18n/ar.json
+++ b/assets/i18n/ar.json
@@ -1,3 +1,18 @@
 {
-  
+  "name": "اسم المستخدم",
+  "full_name": "الاسم",
+  "password": "كلمه السر",
+  "confirm_password": "تأكيد كلمه السر",
+  "password_match": "كلمه السر غير متشابها",
+  "phone": "رقم الهاتف",
+  "email": "البريذ الالكتروني",
+  "login": "تسجيل الدخول",
+  "register": "اشتراك",
+  "logout": "تسجيل الخروج",
+  "success": "تم بنجاح",
+  "loading": "جاري التحميل ...",
+  "error_occurred": "حدث خطأ برجاء المحاوله مره اخري",
+  "user_data": "بيانات المستخدم",
+  "language_button": "English",
+  "empty_field": "يجب ملأ هذه الخانه"
 }
